--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,7 @@ test:
 
 production:
   <<: *default
+  adapter: pg
   database: <%= ENV['RDS_DB_NAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
